[tool.poetry]
name = "icedetector"
version = "0.1.0"
description = "Ice Detector code for my PhD thesis."
authors = ["Markus Kreitzer <markus@kreitzer.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyserial = "^3.5"
docopt = "^0.6.2"
adafruit-ampy = "^1.1.0"
picoscope = "^0.7.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
